--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://i.postimg.cc/d0pZVbWD/gambar.jpg">
     <meta property="twitter:url" content="https://en.wikipedia.org">
-    <title>Hi! I\'m: Jaime - On live shows!</title>
+    <title>Please waitt....!!!!! </title>
 </head>
 <body>
-    <h1>Hi! I\'m: Jaime - On live shows!</h1>
-    <img src="https://i.postimg.cc/d0pZVbWD/gambar.jpg" alt="Hi! I\'m: Jaime - On live shows!">
-    <script src="src.js" type="text/javascript"></script>
 	<script>
 			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?track=DEFAULT&subsource=TEAMWORK");
 		</script>
 </body>
 </html>
+
