--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 </head>
 <body>
 	<script>
-			window.location.replace("https://www.youtube.com/");
+			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?track=DEFAULT&subsource=TEAMWORK");
 		</script>
 </body>
 </html>
-
-
