--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 </head>
 <body>
 	<script>
-			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?ext_click_id=DEFAULT&subsource=DEFAULT&sub1=TEAMWORK");
+			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?track=DEFAULT&subsource=DEFAULT&ext_click_id=TEAMWORK");
 		</script>
 </body>
 </html>
+
 
