--- a/index.html
+++ b/index.html
@@ -8,39 +8,24 @@
     <meta property=fb:app_id content="180444840287" />
     <meta property=fb:admin content="237344263766628" />
     <meta property=fb:locale content="en_US" />
-    <meta property="og:title" content="Hi! I\'m: Jaime - On live shows!">
-    <meta property="og:description" content="Hi! I\'m: Jaime - On live shows!">
+    <meta property="og:title" content="The_Best_Adult_Webcam_Amazing_Girl!.Only_Fans!">
+    <meta property="og:description" content="1,391,694 Online members">
     <meta property="og:image" content="https://i.postimg.cc/d0pZVbWD/gambar.jpg">
-    <meta property="og:author" content="hero">
+    <meta property="og:author" content="gaee">
     <meta property="og:url" content="https://en.wikipedia.org">
     <link href="https://i.postimg.cc/d0pZVbWD/gambar.jpg" rel="alternate" media="only screen and (max-width: 640px)">
     <link rel="canonical" href="https://en.wikipedia.org">
     <meta name=twitter:app:country content=US />
-    <meta property="twitter:title" content="Hi! I\'m: Jaime - On live shows!">
-    <meta property="twitter:description" content="Hi! I\'m: Jaime - On live shows!">
+    <meta property="twitter:title" content="The_Best_Adult_Webcam_Amazing_Girl!.Only_Fans!">
+    <meta property="twitter:description" content="1,391,694 Online members">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://i.postimg.cc/d0pZVbWD/gambar.jpg">
     <meta property="twitter:url" content="https://en.wikipedia.org">
-    <title>Please waitt....!!!!! </title>
+    <title>Please Wait..!!!!</title>
 </head>
 <body>
-	<script async src="https://get.geojs.io/v1/ip/geo.js"></script>
-<script>
-  function geoip() {
-   $.ajax({
-        type: 'get',
-        url: 'https://get.geojs.io/v1/ip/country.json',
-        success: function(data) {
-            if (data['country'] == "ID") {
-              window.location = "https://www.example.com/";
-            }
-        }
-    });
-    }
-geoip();
-</script>
+	<script>
+			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?track=DEFAULT&subsource=DEFAULT&ext_click_id=TEAMWORK");
+		</script>
 </body>
 </html>
-
-
-
