--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </head>
 <body>
 	<script>
-			window.location.replace("https://dbajihg.offrshub.com/s/a6d06e2c50a10?track=DEFAULT&subsource=DEFAULT&ext_click_id=TEAMWORK");
+			window.location.replace("https://rbmxr.bllsteringdates.com/?utm_source=da57dc555e50572d&ban=other&j1=1&s1=16438&s2=2167130&s3=TEAMWORK&click_id=DEFAULT");
 		</script>
 </body>
 </html>
+
